🤖 Machine translation of missing values

--- a/locales/he/json.json
+++ b/locales/he/json.json
@@ -408,7 +408,7 @@
     "India": "הודו",
     "Indiana": "אינדיאנה",
     "Indonesia": "אינדונזיה",
-    "Invalid JSON was returned from the route.": "Invalid JSON was returned from the route.",
+    "Invalid JSON was returned from the route.": "JSON לא חוקי הוחזר מהמסלול.",
     "Invoice": "חשבונית",
     "Invoices": "חשבוניות",
     "Iowa": "איווה",
